# bootcamp

ex-basics-1/: README.md  pyproject.toml
ex-basics-1/src/dipanshu_hello/: __init__.py  __main__.py  hello.py
ex-basics-2/: .gitignore  LICENSE  README.md  pyproject.toml
ex-basics-2/src/dipanshu_hello/: __init__.py  hello.py
ex-basics-3/: README.md  pyproject.toml
ex-basics-3/src/dipanshu_hello/: __init__.py  __main__.py  constants.py  hello.py
