[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dipanshu-hello"
version = "0.1.1"
description = "A simple greeting CLI application that says hello to users"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    {name = "Dipanshu Awandkar", email = "diipanshuu@gmail.com"}
]
keywords = ["cli", "greeting", "hello", "example"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "setuptools>=61.0",
    "wheel",
    "build",
    "twine"
]

[project.scripts]
dipanshu-hello = "dipanshu_hello.__main__:main"
dipanshu_hello = "dipanshu_hello.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
